--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,21 +2,23 @@
 
 * { box-sizing: border-box }
 body, html { width: 100%; height: 100%; overflow: hidden }
-body { font-size: 1.75vw; display: flex; flex-direction: row; align-items: center; }
+body { font-size: 1.75vw; }
 
 /* Panels */
 
-.captions { display: none; list-style: none; flex: 0 0 auto; position: relative; width: 100%; }
-.captions li { position: absolute; left: 2vw; right: 2vw; font-size: 3vw; transform: translateY(-50%); transform-origin: 50% 50% 80px; transition: all 0.5s ease; }
-.captions li.past { opacity: 0; transform: translateY(-50%) rotateX(-70deg); }
-.captions li.future { opacity: 0; transform: translateY(-50%) rotateX(70deg); }
+.captions { display: none; width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column; align-items: center; justify-content: space-around; }
+.captionlist { list-style: none; flex: 0 0 auto; position: relative; width: 100%; }
+.captionlist li { position: absolute; left: 2vw; right: 2vw; font-size: 3vw; transform: translateY(-50%); transform-origin: 50% 50% 80px; transition: transform 0.5s cubic-bezier(0.35, 0.34, 0.36, 1), opacity 0.5s cubic-bezier(0.06, 0.34, 0.01, 1); }
+.captionlist li.past { opacity: 0; transform: translateY(-50%) rotateX(-20deg); }
+.captionlist li.future { opacity: 0; transform: translateY(-50%) rotateX(20deg); }
+.captionlist--src li { color: #799AAF; transition-delay: 0.1s; font-size: 2.5vw; }
 
 .wizard { display: none; margin: 0 calc(2vw + 20px);}
 .wizard .form-control-feedback { right: 95px; }
 
 /* Hide/display main content panels based on app mode */
 
-.mode-captions .captions { display: block; }
+.mode-captions .captions { display: flex; }
 .mode-wizard .wizard { display: block; }
 
 /* Bootstrap overrides */
